# QtGoogleAnalytics

./: .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
include/QtGA/: QtGA.h  QtGAConfiguration.h  QtGA_global.h
src/: CMakeLists.txt  QtGA.cpp  QtGAConfiguration.cpp  QtGoogleAnalytics.cpp  QtGoogleAnalytics.h  QtGoogleAnalytics_global.h
tests/: CMakeLists.txt  testapplication.h  testnetworkaccessmanager.cpp  testnetworkaccessmanager.h  tests.cpp
